kubernetes/main/apps/media/flaresolverr/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: flaresolverr
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: flaresolverr
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: prowlarr
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: bazarr
      toPorts:
        - ports:
            - port: "8191"
              protocol: TCP
  egress:
    # headless browser solving challenges
    - toEntities: ["world"]
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
